     duplicates, I changed the web page to remove duplicate languages
   * I fixed a bug in how the language list was sorted on the web page
   * Updated webtgz.pl to do a couple of undefines before starting the copy of
     the cached campaign, to give perl a chance to release some memory.
   * Fixed a bug in webtgz.pl where it wasn't handling escaped data in
     downloaded files.
 * fix untranslated unit create dialog (#4424)
 * random map generator now uses island_size (#4458)
 * documentation switch doxygen templates from CVS to SVN and from Savannah to Gna!
 * various bug fixes and code cleanups

Version 1.0rc1:
 * language and i18n:
   * updated translations: Afrikaans, Bulgarian, Catalan, Finnish, German,
     Greek, Hungarian, Japanese, Portuguese (Brazil), Russian, Slovenian,
     Spanish, Turkish
   * new manual: Hungarian, updated manual: English, Swedish
   * updated man pages: English, German, Swedish 
 * campaigns:
   * The Dark Hordes
     * Crelanu's Book no longer ends if enemy leaders are killed
     * Underground Pool no longer ends if enemy leaders are killed
     * Underground Pool can now only be won with Gwiti or Tanar (#14495)
   * Son of the Black Eye
     * Watch Towers can no longer be recalled in Clash of Armies
     * Saving Inarix no longer ends if enemy leaders are killed
     * tweaked Black Flag and Desert of Death maps
     * made End of Peace, Toward Mountains of Haag, and Black Flag easier
   * Eastern Invasion
     * fix Konrad II's lines not being spoken in The Council (#14500)
     * change the holy waters to "holy amulets" (also #14539, #14559)
     * Drowned Plains now has fog (#14499)
   * Heir to the Throne
     * fix Delfador losing experience at Siege of Elensefar (#14508)
 * units:
   * changed Orcish Shamans from 20 to 23 HP (Novice 24, Old 22)
   * changed all Orcish Shamans from 60 to 70% defense on villages
   * fixed incorrect reference to Demilich image (#14542)